--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Fonts -->
+   <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+/>
+
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
   
   <!-- Styles -->
@@ -19,7 +24,7 @@
     <h1>Lèvres Sucrées Bakehouse</h1>
     <p>Cakes & Confections to satisfy your cravings</p>
     <div class="hero-btns">
-      <a href="https://wa.me/2349034833383" target="_blank" class="btn">Order on WhatsApp</a>
+      <a href="https://wa.me/2349052979357" target="_blank" class="btn">Order on WhatsApp</a>
       <a href="https://instagram.com/_levressucrees" target="_blank" class="btn outline">Instagram</a>
     </div>
   </div>
@@ -75,6 +80,10 @@
 
 <!-- Floating WhatsApp -->
 <a href="https://wa.me/2349034833383" class="whatsapp-float" target="_blank">💬</a>
+<!-- Floating Call -->
+<a href="tel:+2349034833383" class="call-float" aria-label="Call Lèvres Sucrées">
+  <i class="fa-solid fa-phone"></i>
+</a>
 
 <!-- Optional JS for fade-in -->
 <script>
